--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -188,7 +188,7 @@ header h1 {
 
 header h2 {
   background-color: #7c334f;
-  font: bold italic .85em/1.5 Georgia, Times, “Times New Roman”, serif;
+  font: bold 1.5em Georgia, Times, “Times New Roman”, serif;
   color: #e69b95;
   padding-bottom: 14px;
   margin-top: -3px;
@@ -219,6 +219,7 @@ section#downloads a {
   font-family: 'Open Sans', Myriad, Calibri, sans-serif;
   font-weight: 800;
   font-size: 1.3em;
+  background-position: 0 0;
 }
 
 section#downloads a:hover {
@@ -342,14 +343,6 @@ footer span.left-tail {
 footer span.right-tail {
   background-position: -18px 0;
   right: -11px;
-}
-
-footer span.octocat {
-  background: transparent url(../images/octocat.png) 0 0 no-repeat;
-  display: block;
-  width: 30px;
-  height: 30px;
-  margin: 0 auto;
 }
 
 /* content */
@@ -517,7 +510,6 @@ dd p:first-child {
   border-bottom: .2em double #d3ccc1;
   color: #7c334f;
   text-align: center;
-  font-style: italic;
   margin: 1.1em 0 .38em;
   line-height: 1.2;
   padding-bottom: 10px
